unpackaged/main/default/objects/Contact/fields/Federal_Rep_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Federal_Rep_Facebook__c</fullName>
    <inlineHelpText>Facebook page of the Contact&#39;s federal Congress Member. Populated by Smarty Verification functionality ((provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Federal Rep Facebook</label>
    <type>Url</type>
</CustomField>