unpackaged/main/default/objects/Contact/fields/Federal_Rep_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Federal_Rep_Twitter__c</fullName>
    <inlineHelpText>Twitter handle for the Contact&#39;s federal Congress Member. Populated by Smarty Verification functionality ((provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Federal Rep Twitter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>