unpackaged/main/default/objects/Contact/fields/Federal_Rep_Webform__c.field-meta.xml
<CustomField>
    <fullName>Federal_Rep_Webform__c</fullName>
    <inlineHelpText>Webpage for the Contact&#39;s federal Congress Member. Populated by Smarty Verification functionality ((provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Federal Rep Webform</label>
    <type>Url</type>
</CustomField>