unpackaged/main/default/objects/Contact/fields/First_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Action_Date__c</fullName>
    <inlineHelpText>For email Contact records only. The date the parent Contact first took an action online using this email  (i.e. an &quot;Action Taken&quot; record was created for the email for the 1st time). Populated by scheduled Apex job that&#39;s part of the SpringBoard package.</inlineHelpText>
    <label>First Action Date</label>
    <type>Date</type>
</CustomField>