unpackaged/main/default/objects/Contact/fields/First_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Event_Date__c</fullName>
    <inlineHelpText>Date of the first AJWS event the Contact attended. Rolled-up by DLRS job named &quot;Nightly First Event Date to Contact&quot; which look at all Campaigns with Type = &#39;Event&#39; where the Contact&#39;s Campaign Member record has the Attended box checked.</inlineHelpText>
    <label>First Event Date</label>
    <type>Date</type>
</CustomField>