unpackaged/main/default/objects/Contact/fields/First_Name_Digital__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Digital__c</fullName>
    <inlineHelpText>Used for AJWS email sends. On Email Contacts, displays &quot;Luminate First Name&quot; field if it&#39;s populated, otherwise displays Salesforce &quot;First Name&quot;. Note: &quot;Luminate First Name&quot;  is automatically cleared when the Salesforce &quot;First Name&quot; is populated.</inlineHelpText>
    <label>First Name (Digital)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>