unpackaged/main/default/objects/Contact/fields/Flag_as_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Flag_as_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag as Anonymous</label>
    <type>Checkbox</type>
</CustomField>