unpackaged/main/default/objects/Contact/fields/Former_Phones__c.field-meta.xml
<CustomField>
    <fullName>Former_Phones__c</fullName>
    <inlineHelpText>Enter any former phone numbers for this Contact that are no longer in use (former phones my come useful when looking for a contact on other databases such as Wealth Engine or online).</inlineHelpText>
    <label>Former Phones</label>
    <type>TextArea</type>
</CustomField>