unpackaged/main/default/objects/Contact/fields/General_Phone_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Phone_Notes__c</fullName>
    <inlineHelpText>Enter any relevant information regarding calling this Contact/Donor.</inlineHelpText>
    <label>General Phone Notes</label>
    <type>TextArea</type>
</CustomField>