unpackaged/main/default/objects/Contact/fields/Gift_String_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Gift_String_Encrypted__c</fullName>
    <inlineHelpText>Part of the SpringBoard package and used by Digital Communications. Encrypted set of characters for pre-populating giving options on Springboard forms.</inlineHelpText>
    <label>Gift String Encrypted</label>
    <type>TextArea</type>
</CustomField>