unpackaged/main/default/objects/Contact/fields/GIFTS_ID__c.field-meta.xml
<CustomField>
    <fullName>GIFTS_ID__c</fullName>
    <inlineHelpText>GIFTS ID for grantee Contacts migrated into FC from our legacy GIFTS database.</inlineHelpText>
    <label>GIFTS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>