unpackaged/main/default/objects/Contact/fields/GJC_Listing__c.field-meta.xml
<CustomField>
    <fullName>GJC_Listing__c</fullName>
    <inlineHelpText>how GJC member would like to be publicly listed - may be different than Annual Report Listing</inlineHelpText>
    <label>GJC Listing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>