unpackaged/main/default/objects/Contact/fields/GJC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GJC_Start_Date__c</fullName>
    <inlineHelpText>date individual joined Global Justice Chavurah program</inlineHelpText>
    <label>GJC Start Date</label>
    <type>Date</type>
</CustomField>