unpackaged/main/default/objects/Contact/fields/Global_Circle_Notes__c.field-meta.xml
<CustomField>
    <fullName>Global_Circle_Notes__c</fullName>
    <inlineHelpText>Please add any notes related to the Contact&#39;s Global Circle Membership.</inlineHelpText>
    <label>Global Circle Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>