unpackaged/main/default/objects/Contact/fields/Global_Justice_Chavurah__c.field-meta.xml
<CustomField>
    <fullName>Global_Justice_Chavurah__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>is a member of Global Justice Chavurah program - a public commitment by clergy to participate in GJC events and sign on to advocacy actions</inlineHelpText>
    <label>Global Justice Chavurah</label>
    <type>Checkbox</type>
</CustomField>