unpackaged/main/default/objects/Contact/fields/Grasstop_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Grasstop_Advocate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if the Contact is a Grasstop Advocate.</inlineHelpText>
    <label>Grasstop Advocate</label>
    <type>Checkbox</type>
</CustomField>