unpackaged/main/default/objects/Contact/fields/IA_Working_Group__c.field-meta.xml
<CustomField>
    <fullName>IA_Working_Group__c</fullName>
    <inlineHelpText>Intl Advocacy Working Group affiliation</inlineHelpText>
    <label>IA Working Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>