unpackaged/main/default/objects/Contact/fields/Initial_Market_Source__c.field-meta.xml
<CustomField>
    <fullName>Initial_Market_Source__c</fullName>
    <inlineHelpText>This is the value of the first market source for this contact which never changes once it is set. Part of the SpringBoard package.</inlineHelpText>
    <label>Initial Market Source</label>
    <length>250</length>
    <type>Text</type>
</CustomField>