unpackaged/main/default/objects/Contact/fields/Initial_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Initial_Referrer__c</fullName>
    <inlineHelpText>The external page that sent the user to the site. For example, if the visitor searched Google, then a Google URL will be the Initial Referrer. Part of the SpringBoard package.</inlineHelpText>
    <label>Initial Referrer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>