unpackaged/main/default/objects/Contact/fields/Jewish_Holiday_Readings_Home_Family__c.field-meta.xml
<CustomField>
    <fullName>Jewish_Holiday_Readings_Home_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>One of the options on the Donor Subscription Center. Checked by default, but if the donor unchecks &quot;Jewish Holiday Readings Home &amp; Family&quot; emails from AJWS will no longer be sent to this email address.</inlineHelpText>
    <label>Jewish Holiday Readings Home &amp; Family</label>
    <type>Checkbox</type>
</CustomField>