unpackaged/main/default/objects/Contact/fields/Jewish_Justice_Resources_for_Text_Study__c.field-meta.xml
<CustomField>
    <fullName>Jewish_Justice_Resources_for_Text_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>One of the options on the Donor Subscription Center. Not checked by default. Only if the donor actively selects this option on the subscription center will they receive &quot;Jewish Justice Resources for Text Study&quot; emails from AJWS.</inlineHelpText>
    <label>Jewish Justice Resources for Text Study</label>
    <type>Checkbox</type>
</CustomField>