unpackaged/main/default/objects/Contact/fields/Jr_Federal_Senator__c.field-meta.xml
<CustomField>
    <fullName>Jr_Federal_Senator__c</fullName>
    <inlineHelpText>The contact&#39;s junior federal Senator. Populated by Smarty Verification functionality (provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Jr Federal Senator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>