unpackaged/main/default/objects/Contact/fields/Jr_Federal_Senator_District_Office__c.field-meta.xml
<CustomField>
    <fullName>Jr_Federal_Senator_District_Office__c</fullName>
    <inlineHelpText>Phone number for the Contact&#39;s junior federal Senator&#39;s district (home) office. Populated by Smarty Verification functionality (provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Jr Federal Senator District Office</label>
    <type>Phone</type>
</CustomField>