unpackaged/main/default/objects/Contact/fields/Jr_Federal_Senator_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Jr_Federal_Senator_Facebook__c</fullName>
    <inlineHelpText>Facebook page of the Contact&#39;s junior federal Senator. Populated by Smarty Verification functionality (provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Jr Federal Senator Facebook</label>
    <type>Url</type>
</CustomField>