unpackaged/main/default/objects/Contact/fields/Jr_Federal_Senator_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Jr_Federal_Senator_Twitter__c</fullName>
    <inlineHelpText>Twitter handle for the Contact&#39;s junior federal Senator. Populated by Smarty Verification functionality (provided by SpringBoard/Jackson River) based on the Contact&#39;s ZIP Code.</inlineHelpText>
    <label>Jr Federal Senator Twitter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>