unpackaged/main/default/objects/Contact/fields/Lapsed_Recurring_Donor__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Recurring_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lapsed Recurring Donor</label>
    <type>Checkbox</type>
</CustomField>