unpackaged/main/default/objects/Contact/fields/Largest_Gift__c.field-meta.xml
<CustomField>
    <fullName>Largest_Gift__c</fullName>
    <description>Do not update, updated by automatic process.</description>
    <inlineHelpText>Not used. Part of the NPSP package. The largest HARD Credit amount of a won Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
    <label>Largest Gift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>