unpackaged/main/default/objects/Contact/fields/Last_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Date__c</fullName>
    <inlineHelpText>For email Contact records only. The date the parent Contact last took an action online using this email  (i.e. the last time an &quot;Action Taken&quot; record was created for this email). Populated by scheduled Apex job that&#39;s part of the SpringBoard package.</inlineHelpText>
    <label>Last Action Date</label>
    <type>Date</type>
</CustomField>