unpackaged/main/default/objects/Contact/fields/Last_Name_Digital__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Digital__c</fullName>
    <label>Last Name (Digital)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>