unpackaged/main/default/objects/Contact/fields/Last_Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>Last_Recurring_Donation__c</fullName>
    <inlineHelpText>Last gift from this Contact (i.e. the Contact is the Primary Contact on the Opportunity/gift record) related to a Recurring Donation (i.e. the Recurring Donation field on the Opportunity/gift record is not null). Calculated nightly by an NPSP Rollup.</inlineHelpText>
    <label>Last Recurring Donation</label>
    <type>Date</type>
</CustomField>