unpackaged/main/default/objects/Contact/fields/Last_Study_Tour_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Study_Tour_Date__c</fullName>
    <inlineHelpText>The date of the last AJWS study tour the Contact participated in. Rolled up by a DLRS action named &quot;Nightly Last Study Tour to Contact&quot; (based on campaigns where GL code = 42001 and the &quot;Attended&quot; box on the Campaign Member record is checked).</inlineHelpText>
    <label>Last Study Tour Date</label>
    <type>Date</type>
</CustomField>