unpackaged/main/default/objects/Contact/fields/Legacy_Donor__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Donor</label>
    <type>Checkbox</type>
</CustomField>