unpackaged/main/default/objects/Contact/fields/Legacy_fC_NPSP_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_fC_NPSP_ID__c</fullName>
    <inlineHelpText>ID from legacy fC/NPSP system</inlineHelpText>
    <label>Legacy fC/NPSP ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>