unpackaged/main/default/objects/Contact/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <inlineHelpText>GIFTS ID for Contacts migrated from GIFTS to FC. For Constituents use migrated from Raiser&#39;s Edge user &quot;CRM Legacy ID&quot; field.</inlineHelpText>
    <label>Legacy ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>