unpackaged/main/default/objects/Contact/fields/Legislator_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Legislator_Data_Status__c</fullName>
    <inlineHelpText>Has this record been processed by Jackson River Legislator Service?</inlineHelpText>
    <label>Legislator Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Processed</fullName>
            </value>
            <value>
                <fullName>Ready to Process</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error in Processing</fullName>
            </value>
            <value>
                <fullName>Invalid ZipCode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>