unpackaged/main/default/objects/Contact/fields/Lifetime_Total_Actions__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Total_Actions__c</fullName>
    <formula>Total_Petitions_Signed__c + Total_Message_Actions__c + Total_Social_Actions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For email records only. Total actions the parent contact has taken online using this email. Part of the SpringBoard package and is a formula adding up 3 fields update by a scheduled Apex job.</inlineHelpText>
    <label>Lifetime Total Actions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>