unpackaged/main/default/objects/Contact/fields/Luminate_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Luminate_Last_Name__c</fullName>
    <inlineHelpText>The Contact&#39;s last name brought over from Luminate during migration. If populated, will feed into &quot;Last Name (Digital)&quot;,  which is used on email sends. This field is cleared whenever the Salesforce first/last name are updated.</inlineHelpText>
    <label>Luminate Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>