unpackaged/main/default/objects/Contact/fields/Luminate_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Luminate_Legacy_ID__c</fullName>
    <inlineHelpText>Luminate ID for Contacts brought over during CRM migration.</inlineHelpText>
    <label>Luminate Legacy ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>