unpackaged/main/default/objects/Contact/fields/Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Maiden_Name__c</fullName>
    <inlineHelpText>Contact&#39;s Maiden Name.</inlineHelpText>
    <label>Maiden Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>