unpackaged/main/default/objects/Contact/fields/Mailing_StateProvince_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_StateProvince_Code__c</fullName>
    <label>Mailing State/Province Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Agrigento</fullName>
            </value>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Aichi</fullName>
            </value>
            <value>
                <fullName>Aisén del General Carlos Ibañez del Campo</fullName>
            </value>
            <value>
                <fullName>Akita</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Alagoas</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>Alessandria</fullName>
            </value>
            <value>
                <fullName>Amapá</fullName>
            </value>
            <value>
                <fullName>Amazonas</fullName>
            </value>
            <value>
                <fullName>American Samoa</fullName>
            </value>
            <value>
                <fullName>Ancona</fullName>
            </value>
            <value>
                <fullName>Andaman and Nicobar Islands</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Anhui</fullName>
            </value>
            <value>
                <fullName>Antofagasta</fullName>
            </value>
            <value>
                <fullName>Aomori</fullName>
            </value>
            <value>
                <fullName>Aosta</fullName>
            </value>
            <value>
                <fullName>Arezzo</fullName>
            </value>
            <value>
                <fullName>Arica y Parinacota</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Armed Forces Americas</fullName>
            </value>
            <value>
                <fullName>Armed Forces Europe</fullName>
            </value>
            <value>
                <fullName>Armed Forces Pacific</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Ascoli Piceno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>