unpackaged/main/default/objects/Contact/fields/Major_Donor_Suppression__c.field-meta.xml
<CustomField>
    <fullName>Major_Donor_Suppression__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>used to flag major donor email contacts that should be suppressed from most general fundraising emails - will still be included in event invitations, special solicitations, non-fundraising emails</inlineHelpText>
    <label>Major Donor Suppression</label>
    <type>Checkbox</type>
</CustomField>