unpackaged/main/default/objects/Contact/fields/Market_Source__c.field-meta.xml
<CustomField>
    <fullName>Market_Source__c</fullName>
    <inlineHelpText>The last-seen source code for the donation or form submission. Part of SpringBoard package.</inlineHelpText>
    <label>Market Source</label>
    <length>250</length>
    <type>Text</type>
</CustomField>