unpackaged/main/default/objects/Contact/fields/Mismatch_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A mismatch between the Email Contact and Dev Contact name has been reviewed and needs to be maintained.</inlineHelpText>
    <label>Mismatch Reviewed</label>
    <type>Checkbox</type>
</CustomField>