unpackaged/main/default/objects/Contact/fields/Most_Recent_P2G__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_P2G__c</fullName>
    <inlineHelpText>Contacts most recent WealthEngine P2G value. Rolled-up using DLRS action named: &quot;RT Most Recent P2G to Contact&quot;</inlineHelpText>
    <label>Most Recent P2G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>