unpackaged/main/default/objects/Contact/fields/Naming_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Naming_Exclusions__c</fullName>
    <inlineHelpText>Select to exclude this Contact&#39;s name from various generated Household names. Automatically checked for Email Contacts.</inlineHelpText>
    <label>Naming Exclusions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Household__c.Name</fullName>
            </value>
            <value>
                <fullName>Household__c.Formal_Greeting__c</fullName>
            </value>
            <value>
                <fullName>Household__c.Informal_Greeting__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>