unpackaged/main/default/objects/Contact/fields/Newsletters_and_Updates__c.field-meta.xml
<CustomField>
    <fullName>Newsletters_and_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>One of the options on the Donor Subscription Center. Checked by default, but if the donor unchecks &quot;Newsletters and Updates&quot; emails from AJWS will no longer be sent to this email address.</inlineHelpText>
    <label>Newsletters and Updates</label>
    <type>Checkbox</type>
</CustomField>