unpackaged/main/default/objects/Contact/fields/Next_Gen__c.field-meta.xml
<CustomField>
    <fullName>Next_Gen__c</fullName>
    <formula>AND (OR ( AND(  Age__c  &gt;= 22,  Age__c  &lt;= 40) ,  Next_Gen_Override__c  = TRUE),  Anti_Next_Gen_Override__c  = FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the contact is between 22 and 40 years old or the Global Circle Override checkbox is checked, this is checked.</inlineHelpText>
    <label>Next Gen</label>
    <type>Checkbox</type>
</CustomField>